--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #0d141f;
+    background-color: #121217;
      animation-name: color;
      animation-duration: 1s;
      animation-iteration-count: infinite;
