--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #121217;
+    background-color: #0a0c10;
      animation-name: color;
      animation-duration: 1s;
      animation-iteration-count: infinite;
