--- a/home.css
+++ b/home.css
@@ -67,7 +67,7 @@ article:hover {
 }
 
 h2 {
-    font-family: Arial Black;
+    font-family: Arial;
     color: #48a7ff;
     font-size: 50px;
     font-weight: bold;
@@ -84,7 +84,7 @@ h2 {
 
 
 #updates {
-    font-family: Arial Black;
+    font-family: Arial;
     color: #3335c4;
     font-size: 30px;
     font-weight: bold;
@@ -124,7 +124,7 @@ h2 {
 
 .Content-Name {
     font-size: larger;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: #48a7ff;
     padding-left: 10px;
     padding-top: 10px ;
@@ -132,21 +132,21 @@ h2 {
 }
  .Tag {
     font-size: 13px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(92, 92, 92);
     cursor: pointer;
  }
 
  .Zag {
     font-size: 13px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(44, 62, 223);
     cursor: pointer;
  }
 
  .OS {
     font-size: 13px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(123, 54, 233);
     cursor: pointer;
  }
@@ -164,7 +164,7 @@ h2 {
 
 .All {
     font-size: x-large;
-    font-family: "Arial Black";
+    font-family: Arial;
     font-weight: 500;
     color: #48a7ff;
     padding-left: 20px;
@@ -190,7 +190,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 60px;
@@ -202,7 +202,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 60px;
@@ -224,7 +224,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 60px;
@@ -236,7 +236,7 @@ h2 {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 60px;
@@ -253,7 +253,7 @@ h2 {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 100px;
@@ -265,7 +265,7 @@ h2 {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: "Arial Black";
+    font-family: Arial;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 60px;
