--- a/home.css
+++ b/home.css
@@ -4,8 +4,10 @@ body {
 
 .top {
     width: auto;
+    position: fixed;
+    width: 100%;
     margin: -8px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.822);
     height: 70px;
     padding-top: 16px;
     padding-left: 20px;
@@ -113,17 +115,49 @@ h2 {
     font-weight: bold;
 }
 
+.top-wrapper {
+    background-color: #3335c400;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
 .topdiv1 {
     background-color: rgb(0, 0, 0);
-    width: 70%;
+    width: 30%;
     height: 300px;
     padding-top: 45px;
     transition: 0.4s;
 }
 
+.topdiv2 {
+    background-color: rgb(0, 0, 0);
+    width: 30%;
+    height: 300px;
+    padding-top: 45px;
+    transition: 0.4s;
+}
 
+.topdiv3 {
+    background-color: rgb(0, 0, 0);
+    width: 30%;
+    height: 300px;
+    padding-top: 45px;
+    transition: 0.4s;
+}
 
+.topdiv1:hover {
+    background: rgb(5, 5, 5);
+}
 
+.topdiv2:hover {
+    background: rgb(5, 5, 5);
+}
+
+.topdiv3:hover {
+    background: rgb(5, 5, 5);
+}
 
 .Content-Name {
     font-size: larger;
@@ -161,8 +195,8 @@ h2 {
 /* Content Items Left Front and Center */
 
 .z-logo {
-    float: left;
     transition: 0.4s;
+    float: left;
 }
 
 .z-logo:hover {
@@ -284,4 +318,54 @@ h2 {
     height: 40px;
     width: 60px;
     transition: 0.4s;
+}
+
+/* Media Querys */
+
+@media (max-width: 800px) {
+    .top-wrapper {
+        flex-direction: column;
+        padding-left: 8%;
+    }
+
+    .topdiv1 {
+        width: 90%;
+        height: 230px;
+   }
+
+    .topdiv2 {
+        width: 90%;
+        height: 230px;
+    }
+
+    .topdiv3 {
+        width: 90%;
+        height: 230px;
+    }
+
+    h2 {
+        font-size: 35px;
+    }
+
+    .bottom {
+        font-size: 20px;
+    }
+
+    .sigjj {
+        transform: translateY(60px);
+    }
+
+    .top {
+        position: fixed;
+        height: 140px;
+        width: 100%;
+    }
+
+    .z-logo {
+        position: fixed;
+        padding-left: 50%;
+        margin-left: -43px;
+        height: 50px; 
+        width: 50px;
+    }
 }
