--- a/home.css
+++ b/home.css
@@ -14,6 +14,19 @@ body {
 }
 
 
+.store {
+    background-color: rgb(94, 39, 221);
+    border: 0px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-family: Arial;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    height: 40px;
+    width: 80px;
+    transition: 0.4s;
+}
+
 article {
     font-family: Arial;
     font-weight: bold;
