--- a/store.css
+++ b/store.css
@@ -133,10 +133,12 @@ article {
     position: fixed;
     width: 100%;
     margin: -8px;
-    background-color: rgba(0, 0, 0, 0.822);
+    background-color: rgba(0, 0, 0, 0.534);
     height: 70px;
     padding-top: 16px;
     padding-left: 20px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .z-logo {
@@ -227,7 +229,7 @@ article {
 
     .top {
         position: fixed;
-        height: 140px;
+        height: 170px;
         width: 100%;
     }
 
