--- a/home.css
+++ b/home.css
@@ -335,6 +335,137 @@ h2 {
     transition: 0.4s;
 }
 
+/* Featured Content Page */
+
+#title {
+    color: rgb(74, 119, 243);
+    font-family: arial;
+    font-weight: bold;
+    font-size: 20px;
+    float: left;
+}
+
+pre {
+    color: rgb(255, 255, 255);
+    font-family: arial;
+    font-size: 20px;
+}
+
+.text {
+    height: 300px;
+    width: 800px;
+    background-color: black;
+    transition: 0.4s ease-in-out;
+    margin: auto;
+}
+
+/* image post start */
+
+.image {
+    height: 300px;
+    width: 800px;
+    padding: 0px;
+    margin: auto;
+    transition: 0.4s ease-in-out;
+}
+
+.upper-info {
+    background: rgb(19,19,19);
+    background: linear-gradient(180deg, rgb(19, 19, 19) 55%, rgba(0, 0, 0, 0) 100%);
+    height: 100px;
+    padding: 10px;
+}
+
+#one {
+    background-image: url(https://i.ibb.co/37CXkwF/7twcr0.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-clip: content-box;
+    backdrop-filter: opacity(20%);
+    background-position: center;
+}
+
+#find {
+    color: rgb(24, 80, 233);
+    font-family: arial;
+    font-weight: bolder;
+    font-size: 2rem;
+}
+
+#two {
+    background-image: url(https://i.ibb.co/2Fr0T9k/image.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-clip: content-box;
+    backdrop-filter: opacity(20%);
+    background-position: center;
+}
+
+#zag {
+    color: rgb(133, 74, 243);
+    font-family: arial;
+    font-weight: bold;
+    font-size: 20px;
+    float: right;
+}
+
+
+#tag {
+    color: rgb(104, 104, 104);
+    font-family: arial;
+    font-weight: bold;
+    font-size: 20px;
+    float: right;
+}
+
+a {
+   text-decoration-line: none; 
+}
+
+/* image post end */
+
+.image:hover {
+  scale: 1.1;
+  cursor: pointer;
+  box-shadow: -1px 17px 76px -5px rgba(0,0,0,0.6);
+-webkit-box-shadow: -1px 17px 76px -5px rgba(0,0,0,0.6);
+-moz-box-shadow: -1px 17px 76px -5px rgba(0,0,0,0.6);
+}
+
+.text:hover {
+    scale: 1.1;
+    cursor: pointer;
+    box-shadow: -1px 17px 76px -5px rgba(0,0,0,0.6);
+-webkit-box-shadow: -1px 17px 76px -5px rgba(0,0,0,0.6);
+-moz-box-shadow: -1px 17px 76px -5px rgba(0,0,0,0.6);
+}
+
+@media (max-width: 900px) {
+  .image {
+    width: 400px;
+  }
+
+  .text {
+    width: 400px;
+  }
+
+  pre {
+    font-size: 15px;
+  }
+
+  #title {
+    font-size: 1rem;
+  }
+
+  #zag {
+    font-size: 1rem;
+  }
+
+  #tag {
+    font-size: 1rem;
+  }
+}
+
 /* Media Querys */
 
 @media (max-width: 800px) {
