--- a/store.css
+++ b/store.css
@@ -132,6 +132,7 @@ article {
     width: auto;
     position: fixed;
     width: 100%;
+    z-index: 1000000000000000000;
     margin: -8px;
     background-color: rgba(0, 0, 0, 0.534);
     height: 70px;
