--- a/home.css
+++ b/home.css
@@ -163,6 +163,32 @@ h2 {
     transition: 0.4s;
 }
 
+.rlybtn {
+    background-color: rgb(209, 129, 24);
+    border:0px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-family: Arial;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    height: 40px;
+    width: 60px;
+    transition: 0.4s;
+}
+
+.topbtn {
+    background-color: rgb(24, 209, 132);
+    border:0px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-family: Arial;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    height: 40px;
+    width: 60px;
+    transition: 0.4s;
+}
+
 .topdiv1:hover {
     background: rgb(5, 5, 5);
 }
