--- a/home.css
+++ b/home.css
@@ -1,6 +1,5 @@
 body {
-    background-color: rgb(27, 27, 27);
-    background-image: url(https://i.gifer.com/ACQZ.gif);
+    background-color: rgb(6, 5, 32);
 }
 
 .top {
@@ -9,12 +8,21 @@ body {
     width: 100%;
     margin: -8px;
     z-index: 4;
-    background-color: rgba(0, 0, 0, 0.534);
+    background-color: rgba(13, 3, 77, 0.534);
     height: 70px;
     padding-top: 16px;
     padding-left: 20px;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
+}
+
+/* Font Packs */
+
+.robotoc {
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 
 /* Previews */
@@ -26,7 +34,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #5c5edd;
     font-size: 35px;
     visibility: hidden;
@@ -41,7 +49,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #fff065;
     font-size: 35px;
     visibility: hidden;
@@ -56,7 +64,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #ff65a0;
     font-size: 35px;
     visibility: hidden;
@@ -71,7 +79,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #d365ff;
     font-size: 35px;
     visibility: hidden;
@@ -86,7 +94,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -101,7 +109,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -116,7 +124,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -131,7 +139,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -146,7 +154,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -161,7 +169,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -176,7 +184,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -191,7 +199,7 @@ body {
     height: 100%;
     position: fixed;
     margin: -8px;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     color: #6568ff;
     font-size: 35px;
     visibility: hidden;
@@ -202,7 +210,7 @@ body {
 #prev-p {
     font-size: 25px;
     color: white;
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     z-index: 6;
 }
 
@@ -213,7 +221,7 @@ body {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -222,7 +230,7 @@ body {
 }
 
 article {
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: aliceblue;
     font-size: 20px;
@@ -272,7 +280,7 @@ article:hover {
 }
 
 h2 {
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: 4900;
     color: #76a6ff;
     font-size: 50px;
@@ -281,7 +289,7 @@ h2 {
 }
 
 .bottom {
-    font-family: 'Arial Black';
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: #ffffff;
     font-size: 30px;
@@ -291,7 +299,7 @@ h2 {
 
 
 #updates {
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     color: #3335c4;
     font-size: 30px;
     font-weight: bold;
@@ -331,15 +339,14 @@ h2 {
 
 
 .topdiv1 {
-    background-color: rgb(0, 0, 0);
-    width: 30%;
+    background-color: rgb(0, 4, 22);    background-color: rgb(4, 16, 73);    width: 30%;
     height: 300px;
     padding-top: 45px;
     transition: 0.4s;
 }
 
 .topdiv2 {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(4, 16, 73);
     width: 30%;
     height: 300px;
     padding-top: 45px;
@@ -347,7 +354,7 @@ h2 {
 }
 
 .topdiv3 {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(4, 16, 73);
     width: 30%;
     height: 300px;
     padding-top: 45px;
@@ -359,7 +366,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -372,7 +379,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -381,20 +388,20 @@ h2 {
 }
 
 .topdiv1:hover {
-    background: rgb(5, 5, 5);
+    background: rgb(5, 2, 48);
 }
 
 .topdiv2:hover {
-    background: rgb(5, 5, 5);
+    background: rgb(5, 2, 48);
 }
 
 .topdiv3:hover {
-    background: rgb(5, 5, 5);
+    background: rgb(5, 2, 48);
 }
 
 .Content-Name {
     font-size: larger;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: #48a7ff;
     padding-left: 10px;
@@ -403,7 +410,7 @@ h2 {
 }
  .Tag {
     font-size: 13px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(92, 92, 92);
     cursor: pointer;
@@ -411,7 +418,7 @@ h2 {
 
  .Zag {
     font-size: 13px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(44, 62, 223);
     cursor: pointer;
@@ -419,7 +426,7 @@ h2 {
 
  .OS {
     font-size: 13px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(123, 54, 233);
     cursor: pointer;
@@ -430,15 +437,24 @@ h2 {
 .z-logo {
     transition: 0.4s;
     float: left;
+    
 }
 
 .z-logo:hover {
-    filter: drop-shadow(0px 0px 18px #48a7ff);
+    filter: drop-shadow(0px 0px 18px #0385ffc7);
+}
+
+.bigbanner {
+    background-image: url(https://zetrogames.com/zetrogames_banner2.png);
+    width: 100%;
+    height: 400px;
+    opacity: 50%;
+    filter: blur(5px);
 }
 
 .All {
     font-size: x-large;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: 500;
     color: #48a7ff;
     padding-left: 20px;
@@ -464,7 +480,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -477,7 +493,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -501,7 +517,7 @@ h2 {
     border:0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -514,7 +530,7 @@ h2 {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -532,7 +548,7 @@ h2 {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -545,7 +561,7 @@ h2 {
     border: 0px;
     border-radius: 20px;
     font-size: 12px;
-    font-family: Arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
@@ -587,7 +603,7 @@ h2 {
 .btn-filter {
   width: 40px;
   height: 40px;
-  font-family: arial;
+  font-family: "Roboto Condensed", sans-serif;
   color: rgb(255, 255, 255);
   padding: 10px;
   border: 3px solid white;
@@ -602,7 +618,7 @@ h2 {
 #extras {
   opacity: 0%;
   font-size: 17px;
-  font-family: arial;
+  font-family: "Roboto Condensed", sans-serif;
   color: rgb(164, 85, 255);
 }
 
@@ -614,7 +630,7 @@ a {
 #extrasG {
   opacity: 0%;
   font-size: 25px;
-  font-family: arial;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
   color: rgb(119, 0, 255);
 }
@@ -622,7 +638,7 @@ a {
 .btn-zags {
   width: 120px;
   height: 40px;
-  font-family: arial;
+  font-family: "Roboto Condensed", sans-serif;
   background-color: rgb(57, 57, 255);
   color: rgb(255, 255, 255);
   padding: 10px;
@@ -632,7 +648,7 @@ a {
 }
 
 #none-found {
-  font-family: arial;
+    font-family: "Roboto Condensed", sans-serif;
   font-weight: bolder;
   color: rgb(224, 63, 63);
   font-size: 20px;
@@ -646,6 +662,7 @@ a {
 #fi {
   margin: auto;
   height: 45px;
+  background-color: #00001d;
 }
 
 .filter {
@@ -656,7 +673,7 @@ a {
 
 #title {
     color: rgb(74, 119, 243);
-    font-family: arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     font-size: 20px;
     float: left;
@@ -664,7 +681,7 @@ a {
 
 pre {
     color: rgb(255, 255, 255);
-    font-family: arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-size: 20px;
 }
 
@@ -700,7 +717,7 @@ pre {
 
 #find {
     color: rgb(93, 136, 255);
-    font-family: arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bolder;
     font-size: 2rem;
     cursor: default;
@@ -720,7 +737,7 @@ pre {
 
 #zag {
     color: rgb(133, 74, 243);
-    font-family: arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     font-size: 20px;
     float: right;
@@ -729,7 +746,7 @@ pre {
 
 #tag {
     color: rgb(104, 104, 104);
-    font-family: arial;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     font-size: 20px;
     float: right;
