--- a/home.css
+++ b/home.css
@@ -445,11 +445,10 @@ h2 {
 }
 
 .bigbanner {
-    background-image: url(https://zetrogames.com/zetrogames_banner2.png);
+    background-image: url(https://zetrogames.com/helensburgh_advert.png);
     width: 100%;
     height: 400px;
-    opacity: 50%;
-    filter: blur(5px);
+    opacity: 90%;
 }
 
 .All {
