--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(6, 5, 32);
+    background-color: rgb(3, 0, 20);
 }
 
 .top {
@@ -8,7 +8,7 @@ body {
     width: 100%;
     margin: -8px;
     z-index: 4;
-    background-color: rgba(13, 3, 77, 0.534);
+    background-color: rgba(14, 0, 104, 0.534);
     height: 70px;
     padding-top: 16px;
     padding-left: 20px;
@@ -217,15 +217,15 @@ body {
 /* End of Previews */
 
 .store {
-    background-color: rgb(94, 39, 221);
+    background-color: rgb(76, 0, 255);
     border: 0px;
-    border-radius: 20px;
-    font-size: 12px;
+    font-size: 15px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 80px;
+    border-radius: 20px;
     transition: 0.4s;
 }
 
@@ -300,7 +300,7 @@ h2 {
 
 #updates {
     font-family: "Roboto Condensed", sans-serif;
-    color: #3335c4;
+    color: #ffffff;
     font-size: 30px;
     font-weight: bold;
 }
@@ -362,28 +362,28 @@ h2 {
 }
 
 .rlybtn {
-    background-color: rgb(209, 129, 24);
+    background-color: rgb(255, 154, 22);
     border:0px;
-    border-radius: 20px;
-    font-size: 12px;
+    font-size: 15px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
+    border-radius: 20px;
     width: 60px;
     transition: 0.4s;
 }
 
 .topbtn {
-    background-color: rgb(24, 209, 132);
+    background-color: rgb(212, 0, 255);
     border:0px;
-    border-radius: 20px;
-    font-size: 12px;
+    font-size: 15px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 60px;
+    border-radius: 20px;
     transition: 0.4s;
 }
 
@@ -446,9 +446,13 @@ h2 {
 
 .bigbanner {
     background-image: url(https://zetrogames.com/helensburgh_advert.png);
-    width: 100%;
+    width:100%;
     height: 400px;
     opacity: 90%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
 }
 
 .All {
@@ -477,8 +481,8 @@ h2 {
 .joinbtn {
     background-color: rgb(53, 58, 124);
     border:0px;
+    font-size: 15px;
     border-radius: 20px;
-    font-size: 12px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
@@ -490,8 +494,8 @@ h2 {
 .crtbtn {
     background-color: rgb(73, 136, 218);
     border:0px;
+    font-size: 15px;
     border-radius: 20px;
-    font-size: 12px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
@@ -513,9 +517,9 @@ h2 {
 
 .homebtn {
     background-color: rgb(248, 115, 115);
-    border:0px;
-    border-radius: 20px;
-    font-size: 12px;
+    border: 3px;
+    border-color: transparent;
+    font-size: 15px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
@@ -525,10 +529,10 @@ h2 {
 }
 
 .gamesbtn {
-    background-color: rgb(57, 151, 65);
+    background-color: rgb(47, 223, 62);
     border: 0px;
     border-radius: 20px;
-    font-size: 12px;
+    font-size: 15px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
@@ -543,16 +547,17 @@ h2 {
 
 
 .imgbtn {
-    background-color: rgb(221, 173, 39);
-    border: 0px;
-    border-radius: 20px;
-    font-size: 12px;
+    background-color: rgb(255, 51, 0);
+    border: 3px;
+    border-color: transparent;
+    font-size: 15px;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     height: 40px;
     width: 100px;
     transition: 0.4s;
+    border-radius: 20px;
 }
 
 .vidbtn {
@@ -591,7 +596,7 @@ h2 {
 }
 
 #more-btns {
-  background-color: rgb(63, 63, 63);
+  background-color: rgb(0, 0, 0);
   width: 70px;
   border: 3px solid rgb(255, 255, 255);
   float: right;
@@ -654,18 +659,14 @@ a {
   display: none;
 }
 
-.btn-zags:hover {
-  transform: rotate(5deg);
-}
-
 #fi {
   margin: auto;
   height: 45px;
-  background-color: #00001d;
+  background-color: #131313;
 }
 
 .filter {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(45, 47, 180);
   width: 800px;
   padding: 10px;
 }
@@ -735,7 +736,7 @@ pre {
 }
 
 #zag {
-    color: rgb(133, 74, 243);
+    color: rgb(93, 5, 255);
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     font-size: 20px;
@@ -789,6 +790,11 @@ margin-top: -10px;
 @media (max-width: 900px) {
   .image {
     width: 350px;
+  }
+
+  .bigbanner {
+    height: 200px;
+    background-position: center;
   }
 
   .text {
